latex and bibtex workign

--- a/paper/pldi2018.tex
+++ b/paper/pldi2018.tex
@@ -175,7 +175,7 @@ Text of abstract \ldots.
 
 \section{Introduction}
 
-Text of paper \ldots
+ext of paper tons fo text \cite{CCEric} \ldots
 
 
 %% Acknowledgments
@@ -197,7 +197,7 @@ Text of paper \ldots
 
 
 %% Bibliography
-%\bibliography{bibfile}
+\bibliography{references}
 
 
 %% Appendix
