--- a/paper/pldi2018.tex
+++ b/paper/pldi2018.tex
@@ -58,21 +58,30 @@
                         %% http://ctan.org/pkg/booktabs
 \usepackage{subcaption} %% For complex figures with subfigures/subcaptions
                         %% http://ctan.org/pkg/subcaption
+\usepackage{lambda}     %% lambda land macros
+\usepackage{lipsum}                     % Dummytext
+\usepackage{xargs}                      % Use more than one optional parameter in a new commands
+% \usepackage[pdftex,dvipsnames]{xcolor}  % Coloured text etc.
+\usepackage[colorinlistoftodos,prependcaption,textsize=tiny]{todonotes}
+\newcommandx{\change}[2][1=]{\todo[linecolor=blue,backgroundcolor=blue!25,bordercolor=blue,#1]{#2}}
+\newcommandx{\improvement}[2][1=]{\todo[linecolor=Plum,backgroundcolor=Plum!25,bordercolor=Plum,#1]{#2}}
+\newcommandx{\unsure}[2][1=]{\todo[linecolor=red,backgroundcolor=red!25,bordercolor=red,#1]{#2}}
+\newcommandx{\addcitation}[2][1=]{\todo[linecolor=OliveGreen,backgroundcolor=OliveGreen!25,bordercolor=OliveGreen,#1]{#2}}
 
 
 \begin{document}
 
 %% Title information
-\title[Short Title]{Full Title}         %% [Short Title] is optional;
+\title[To be determined]{TBD}           %% [Short Title] is optional;
                                         %% when present, will be used in
                                         %% header instead of Full Title.
-\titlenote{with title note}             %% \titlenote is optional;
-                                        %% can be repeated if necessary;
-                                        %% contents suppressed with 'anonymous'
-\subtitle{Subtitle}                     %% \subtitle is optional
-\subtitlenote{with subtitle note}       %% \subtitlenote is optional;
-                                        %% can be repeated if necessary;
-                                        %% contents suppressed with 'anonymous'
+% \titlenote{with title note}             %% \titlenote is optional;
+%                                         %% can be repeated if necessary;
+%                                         %% contents suppressed with 'anonymous'
+% \subtitle{Subtitle}                     %% \subtitle is optional
+% \subtitlenote{with subtitle note}       %% \subtitlenote is optional;
+%                                         %% can be repeated if necessary;
+%                                         %% contents suppressed with 'anonymous'
 
 
 %% Author information
@@ -135,7 +144,22 @@
 %% Note: \begin{abstract}...\end{abstract} environment must come
 %% before \maketitle command
 \begin{abstract}
-Text of abstract \ldots.
+  Many program analyses can be reduced to satisfiability (SAT) problems, or more
+  generally, to satisfiability modulo theories (SMT) problems. For example, dead
+  code analysis can be formulated in terms of whether or not a particular
+  conjunction of conditions is satisfiable. In the context of explicit
+  variability, such as when analyzing software product lines or when introducing
+  alternative variations for counterfactual or migrational typing, we can reduce
+  the corresponding analyses to variational SAT/SMT problems. This work presents
+  \change{this whole paragraph will need to be altered with applications} a
+  series of optimizations on variational boolean propositional formulae, an
+  algorithm to solve variational propositional formulae, an incremental VSMT
+  solver that efficiently solves \textit{variants} for satisifiability, and
+  empirical results comparing standard brute force techniques, a minimal case
+  called \textit{and decomposisition} and the variational solving algorithm on
+  simulated data and application data. We report a \todo{report data performance
+    speedup, or memory cost} in simulated data, and a \todo{same as above} in
+  application data.
 \end{abstract}
 
 
@@ -166,7 +190,7 @@ Text of abstract \ldots.
 \keywords{keyword1, keyword2, keyword3}  %% \keywords are mandatory in final camera-ready submission
 
 
-%% \maketitle
+\maketitle
 %% Note: \maketitle command must come after title commands, author
 %% commands, abstract environment, Computing Classification System
 %% environment and commands, and keywords command.
@@ -177,7 +201,14 @@ Text of abstract \ldots.
 
 ext of paper tons fo text \cite{CCEric} \ldots
 
+\subsection{Choice Calculus}
+\subsection{Incremental Satisfiability Solvers}
+\subsection{Gradual Typing}
 
+\section{Background and Related Work}
+\section{Experimental Setup}
+\section{Results}
+\section{Discussion}
 %% Acknowledgments
 \begin{acks}                            %% acks environment is optional
                                         %% contents suppressed with 'anonymous'
