making slow but sure progress

--- a/paper/bib/choicecalc.bib
+++ b/paper/bib/choicecalc.bib
@@ -19,8 +19,6 @@
  address = {New York, NY, USA},
  keywords = {Variation, representation},
 }
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%% Book Chapters %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 @Inbook{Erwig2013,
 author="Erwig, Martin
@@ -235,4 +233,16 @@ isbn="978-3-319-91376-6"
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {choice calculus, constraint-based type system, program families, static-analysis lifting, variational types},
+}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Thesis %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+@phdthesis{Walk13thesis,
+  author   = {Walkingshaw, E.},
+  title    = {{The Choice Calculus: A Formal Language of Variation}},
+  school   = {{Oregon State University}},
+  year     = 2013,
+  note     = {\url{http://hdl.handle.net/1957/40652}},
+  kind     = {Thesis},
+  status   = {Appeared},
+  abstract = {In this thesis I present the choice calculus, a formal language for representing variation in software and other structured artifacts. The choice calculus is intended to support variation research in a way similar to the lambda calculus in programming language research. Specifically, it provides a simple formal basis for presenting, proving, and communicating theoretical results. It can serve as a common language of discourse for researchers working on different views of similar problems and provide a shared back end in tools. \\ This thesis collects a large amount of work on the choice calculus. It defines the syntax and denotational semantics of the language along with modular language extensions that add features important to variation research. It presents several theoretical results related to the choice calculus, such as an equivalence relation that supports semantics-preserving transformations of choice calculus expressions, and a type system for ensuring that an expression is well formed. It also presents a Haskell DSEL based on the choice calculus for exploring the concept of variational programming.}
 }
