dont need to spend time on internals

--- a/paper/bib/choicecalc.bib
+++ b/paper/bib/choicecalc.bib
@@ -246,3 +246,23 @@ isbn="978-3-319-91376-6"
   status   = {Appeared},
   abstract = {In this thesis I present the choice calculus, a formal language for representing variation in software and other structured artifacts. The choice calculus is intended to support variation research in a way similar to the lambda calculus in programming language research. Specifically, it provides a simple formal basis for presenting, proving, and communicating theoretical results. It can serve as a common language of discourse for researchers working on different views of similar problems and provide a shared back end in tools. \\ This thesis collects a large amount of work on the choice calculus. It defines the syntax and denotational semantics of the language along with modular language extensions that add features important to variation research. It presents several theoretical results related to the choice calculus, such as an equivalence relation that supports semantics-preserving transformations of choice calculus expressions, and a type system for ensuring that an expression is well formed. It also presents a Haskell DSEL based on the choice calculus for exploring the concept of variational programming.}
 }
+
+@article{Walkingshaw:2012:CMI:2480361.2371421,
+ author = {Walkingshaw, Eric and Erwig, Martin},
+ title = {A Calculus for Modeling and Implementing Variation},
+ journal = {SIGPLAN Not.},
+ issue_date = {March 2013},
+ volume = {48},
+ number = {3},
+ month = sep,
+ year = {2012},
+ issn = {0362-1340},
+ pages = {132--140},
+ numpages = {9},
+ url = {http://doi.acm.org/10.1145/2480361.2371421},
+ doi = {10.1145/2480361.2371421},
+ acmid = {2371421},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {choice calculus, feature-oriented software development, preprocessors, separation of concerns, variational software},
+}
